Add changes from review

--- a/notebooks/preprocess-irena-data.ipynb
+++ b/notebooks/preprocess-irena-data.ipynb
@@ -42,34 +42,20 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "COUNTRY_IDS = [\n",
-    "    'AUT', 'BEL', 'BGR', 'HRV', 'CYP', 'CZE', 'DNK', 'EST', 'FIN', 'FRA',\n",
-    "    'DEU', 'GRC', 'HUN', 'IRL', 'ITA', 'LVA', 'LTU', 'LUX', 'NLD', 'POL',\n",
-    "    'PRT', 'ROU', 'SVK', 'SVN', 'ESP', 'SWE', 'GBR', 'ALB', 'BIH', 'MKD',\n",
-    "    'MNE', 'NOR', 'SRB', 'CHE'\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "country_code  year\n",
-       "ALB           2000    4594\n",
-       "              2001    3555\n",
-       "              2002    3512\n",
-       "              2003    4885\n",
-       "              2004    5466\n",
+       "AFG           2000    457\n",
+       "              2001    457\n",
+       "              2002    457\n",
+       "              2003    458\n",
+       "              2004    458\n",
        "Name: generation_gwh, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +63,7 @@
    "source": [
     "df = (\n",
     "    pd\n",
-    "    .read_excel(\"../data/IRENA_RE_Statistics_July2020extract.xlsx\", index_col=[0, 1, 2])\n",
+    "    .read_excel(\"../data/IRENA_RE_Statistics_July2020extract.xlsx\", engine=\"openpyxl\", index_col=[0, 1, 2])\n",
     "    .rename_axis(index=[\"country_code\", \"indicator\", \"technology\"])\n",
     "    .rename_axis(columns=\"year\")\n",
     "    .stack()\n",
@@ -87,20 +73,18 @@
     "    .dropna(\"index\", subset=[\"country_code\"])\n",
     "    .set_index([\"country_code\", \"technology\", \"year\"])\n",
     "    .loc[:, \"Electricity generation (GWh)\"]\n",
-    "    .to_xarray()\n",
-    "    .sel(technology=\"Renewable hydropower\", country_code=COUNTRY_IDS)\n",
-    "    .to_series()\n",
+    "    .xs(\"Renewable hydropower\", level=\"technology\")\n",
     "    .rename(\"generation_gwh\")\n",
     "    .dropna()\n",
     "    .sort_index()\n",
-    "    .astype(np.int)\n",
+    "    .astype(int)\n",
     ")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
